E2EE file added fixed the bug in googlelogin as well